[package]
name = "chimecho"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux = "1.3.11"
tokio = {version = "1.17.0", features = ["full"]} 
regex = "1"
lazy_static = "1.4.0"
google-drive3 = "3.1.0"
rustls-native-certs = "0.6.2"
yup-oauth2 = "6.6.0"