[package]
name = "chimecho"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux = "1.3.11"
tokio = {version = "1.17.0", features = ["full"]} 
regex = "1"
lazy_static = "1.4.0"
google-drive3 = "3.1.0"
rustls-native-certs = "0.6.2"
yup-oauth2 = "6.6.0"
reqwest = "0.11.10"
zip = "0.6.2"
soup = "0.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.17", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
itertools = "0.10.3"
log = "0.4.0"
anyhow = "1.0.62"
env_logger = "0.9.0"